ecmascript/parser/tests/test262-error-references/fail/9015de51ceefe60a.js.stderr
error: Unexpected token `(`. Expected identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/test262-parser/fail/9015de51ceefe60a.js:1:3
  |
1 | ({(a):0})
  |   ^

